--- a/tenki_210719/index.html
+++ b/tenki_210719/index.html
@@ -33,7 +33,7 @@
         <aside>　<!-- aside -->
             <h3 class="sub-title">スキー場一覧</h3>
             <ul class="sub-menu">
-                <li><input type="checkbox"> 蔵王スキー場</input></li>
+                <li><input type="checkbox" onclick="buttonClick();"> 蔵王スキー場</input></li>
                 <li><input type="checkbox"> 〇〇スキー場</input></li>
                 <li><input type="checkbox"> 〇〇スキー場</input></li>
                 <li><input type="checkbox"> 〇〇スキー場</input></li>
