aside list表示 OK / article表示 OK

--- a/tenki_app/index.html
+++ b/tenki_app/index.html
@@ -1,6 +1,4 @@
-<!--
-    
--->
+<!--aiu-->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -35,14 +33,7 @@
         </article>                          <!-- article -->
 
         <aside>　<!-- aside -->
-            <h3 class="sub-title">スキー場一覧　<input type="button" id="ok" value=" OK "></h3>
-            <form class="sub-menu" name="checkList">
-                <li><input type="checkbox" id="checkbox0" value="0" onchange=buttonClick(value);> 蔵王スキー場</input></li>
-                <li><input type="checkbox" value="1" onchange=buttonClick(value);> 苗場スキー場</input></li>
-                <li><input type="checkbox" value="2" onchange=buttonClick(value);> 赤倉観光リゾートスキー場</input></li>
-                <li><input type="checkbox" value="3" onchange=buttonClick(value);> 〇〇スキー場</input></li>
-            </form>
-            
+            <div id="aside-wrapper"></div>
             <h3 class="sub-title">サブタイトル</h3>
             <p>
                 サブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトル
