add Error Alert

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="main-content wrapper">      <!-- main-content wrapper -->
 
         <article>                               <!-- article -->
-            <div id="article-wrapper"></div>
+            <div id="article-wrapper">
+                スキー場にチェックインする日付と、行きたいスキー場を選択してください
+            </div>
         </article>                              <!-- article -->
 
         <aside>                                 <!-- aside -->
