--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <ul class="date-list">
                     <li id="todayNow"></li>
                     <li>CHECK IN : <input type="date" id="checkIn"></li>
-                    <li><a href="">AAAAAAA : </a></li>
                 </ul>
             </div>
         </header>
@@ -46,9 +45,7 @@
     </div>                                  <!-- main-content wrapper -->
     
     <footer>
-        <div class="wraper">
-            <p><small>2021 usk-155</small></p>
-        </div>
+        <h3>2021 ©️yusuke.n</h3>
     </footer>
 
     <script src="./main.js"></script>
