--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!--aiu-->
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -8,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/destyle.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>TODAY'S SKI</title>
+    <title>Tomorrow's Ski</title>
 </head>
 <body>
     <div id="title-wrapper" class="big-bg">
         <header>
             <div class="title">
-                <h1 class="page-title">TODAY'S SKI</h1>
+                <h1 class="page-title">Tomorrow's Ski</h1>
+                <p>明日はどこのスキー場に行きますか？</p>
+                <p>降雪情報をチェックしてパウダースノーを楽しみましょう！！</p>
             </div> <!-- title -->
             <div class="date">
                 <ul class="date-list">
                     <li id="todayNow"></li>
-                    <li>CHECK IN : <input type="date" id="checkIn"></li>
+                    <li>CHECK IN : <input type="date" id="checkIn" max="" min=""></li>
                 </ul>
             </div>
         </header>
@@ -36,10 +36,6 @@
 
         <aside>                                 <!-- aside -->
             <div id="aside-wrapper"></div>
-            <h3 class="sub-title">サブタイトル</h3>
-            <p>
-                サブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトルサブタイトル
-            </p>
         </aside>                                <!-- aside -->
 
     </div>                                  <!-- main-content wrapper -->
