--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/destyle.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/destyle.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <title>Tomorrow's Ski</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
                 <h1 class="page-title">Tomorrow's Ski</h1>
                 <p>明日はどこのスキー場に行きますか？</p>
                 <p>降雪情報をチェックしてパウダースノーを楽しみましょう！！</p>
+                <p>編集テスト</p>
             </div> <!-- title -->
             <div class="date">
                 <ul class="date-list">
@@ -44,6 +45,6 @@
         <h3>2021 ©️yusuke.n</h3>
     </footer>
 
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
